# LightningJukeboxBot

./: API.md  LICENSE  README.md  build.js
doc/design/: index.md  jukebox.md  messages.md  player.md
src/: invoicehelper.py  jukeboxbot.py  jukeboxtexts.py  lnbits.py  pyproject.toml  settings.py  spotifyhelper.py  statshelper.py  telegramhelper.py  userhelper.py
src/spotipy/: oauth2.py
web/: JukeboxBot.css  JukeboxBotFund.js  JukeboxBotInvoice.js  index.js  jukeboxbot_invoicepaid.html  popup.html  popup.js  webui.html
web/src/: createDisplay.ts  createFooter.1.ts  createHeader.ts  createInfos.ts  createMain.ts  createQueue.ts  createSearchResult.ts  createSearchbar.ts  createTabs.ts  createUI.ts  createWebui.ts  getQueue.ts  getResults.ts  index.d.ts  index.ts  popup.ts  setup.ts  utils.ts
web/src/lib/: gradientMap.ts  gradients.ts  iconpaths.ts  placeholderColors.ts  tabColorsMap.ts
