[tool.poetry]
name = "telegram-jukebox-lightning-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "telegram_jukebox_lightning_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = {extras = ["job-queue"], version = "^20.1"}
qrcode = "^7.4.2"
starlette = "^0.25.0"
uvicorn = "^0.20.0"
redis = "^4.5.1"
pep8 = "^1.7.1"
requests = "^2.28.2"
python-multipart = "^0.0.6"
pillow = "^10.0.0"
asyncio-mqtt = "^0.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
